tests/ui/try_suffix_staged.stderr
Error [E0006]: `?` doesn't do anything yet
  --> tests/ui/try_suffix_staged.lex:6:22
    |
  6 |     val x = compute()?;
    |                      ^
 Why: errors as values (and `?` to pass them along) arrive in M4
 Fix: remove the `?` for now
