tests/ui/try_suffix_staged.jet
fn compute() -> Int {
    return 1;
}

fn main() {
    val x = compute()?;
    print(x);
}
